fix background alignment

--- a/public/static/css/main.css
+++ b/public/static/css/main.css
@@ -13,7 +13,7 @@
   min-width: 100%;
   z-index: 11;
 
-  background: transparent url('/static/images/hills.gif') bottom left repeat-x;
+  background: transparent url('/static/images/hills.png') bottom left repeat-x;
 }
 
 .tagline{
